--- a/Todolist che sfrutta True-False (demo)/src/app/componenti/todoview/todoview.component.html
+++ b/Todolist che sfrutta True-False (demo)/src/app/componenti/todoview/todoview.component.html
@@ -10,7 +10,7 @@
           height="16" fill="currentColor" class="bi bi-trash2" viewBox="0 0 16 16">
           <path
             d="M14 3a.702.702 0 0 1-.037.225l-1.684 10.104A2 2 0 0 1 10.305 15H5.694a2 2 0 0 1-1.973-1.671L2.037 3.225A.703.703 0 0 1 2 3c0-1.105 2.686-2 6-2s6 .895 6 2zM3.215 4.207l1.493 8.957a1 1 0 0 0 .986.836h4.612a1 1 0 0 0 .986-.836l1.493-8.957C11.69 4.689 9.954 5 8 5c-1.954 0-3.69-.311-4.785-.793z" />
-        </svg></button><button id="addbutton" (click)="cech(todos.id)"><svg xmlns="http://www.w3.org/2000/svg"
+        </svg></button><button id="addbutton" (click)="cech(todos)"><svg xmlns="http://www.w3.org/2000/svg"
           width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
           <path
             d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
